--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -752,8 +752,8 @@ div.desc {
         }
 
         .cover-headlines-outer {
-            width: 496px;
-            height: 168px;
+            width: 397px;
+            height: 134px;
             border: 3px solid #8c0e0f;
             background-color: #e6eed6;
             border-radius: 25px;
@@ -763,6 +763,20 @@ div.desc {
             align-items: center;
         }
 
+        .cover-headlines {
+
+            font-size: 100%;
+            font-family: "Cabin", sans-serif;
+            text-transform: capitalize;
+            letter-spacing: 4px;
+            width: 377px;
+            height: 124px;
+            display: flex;
+            position: absolute;
+            justify-content: center;
+            text-align: center;
+            flex-direction: column;
+        }
 
     }
     
