--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,6 +373,7 @@ div.desc {
 #right-box-testimonial > h4 {
     font-size: 80%;
     font-weight: 400;
+    margin: 5px;
 }
 
 .circle-container {
@@ -776,7 +777,7 @@ div.desc {
         /* about-us boxes on index.html */
         #about-us {
             width: 80%;
-            height: 375px;
+            height: auto;
             margin: 0 auto;
             display: flex;
             flex-direction: column;
@@ -785,8 +786,153 @@ div.desc {
             color: white;
         }
 
+    #centre-text {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0 auto;
+}
 
-    }
+#left-box {
+    width: 100%;
+    background-color: #0b2838;
+    height: 375px;
+    margin: 5px;
+}
+
+#right-box {
+    width: 100%;
+    background-color: #0b2838;
+    height: 375px;
+    margin: 5px;
+}
+
+#centre-box {
+    width: 100%;
+    background-color: #2F5596;
+    height: 375px;
+    margin: 5px;
+    clear: both;
+}
+
+/* testimonials boxes on index.html */
+
+#testimonials {
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+
+#left-box-testimonial {
+    width: 100%;
+    background-color: #0b2838;
+    height: 375px;
+    margin: 5px;
+}
+
+#centre-box-testimonial {
+    width: 100%;
+    background-color: #2F5596;
+    height: 375px;
+    margin: 5px;
+}
+
+#right-box-testimonial {
+    width: 100%;
+    background-color: #0b2838;
+    height: 375px;
+    margin: 5px;
+}
+
+/* footer info boxes */
+
+.footer {
+    position:fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+    height: auto;
+    background-color: #fff;
+    padding-bottom: 10px;
+  }
+
+#infobox-content-1 {
+    font-size: 25px;
+    display: flex;
+    float: left;
+    justify-content: center;
+    padding-left: 20px;
+    word-spacing: 20px;
+    width: 50%;
+}
+
+.title-left {
+    color: #2F5596;
+    text-decoration: none;
+    font-family: "Cabin", Sans-serif;
+    font-size: 85%;
+    letter-spacing: 4px;
+    font-weight: 500;
+    line-height: 30px;
+    margin: 20px 0px 5px 0px;
+    border-bottom: 1px solid #8c0e0f
+}
+
+#infobox-content-2 {
+    font-size: 25px;
+    display: flex;
+    float: right;
+    justify-content: center;
+    padding-right: 20px;
+    word-spacing: 20px;
+    width: 50%;
+}
+
+.title-right {
+    color: #2F5596;
+    text-decoration: none;
+    font-family: "Cabin", Sans-serif;
+    font-size: 85%;
+    letter-spacing: 4px;
+    font-weight: 500;
+    line-height: 30px;
+    margin: 20px 0px 5px 0px;
+    border-bottom: 1px solid #8c0e0f
+}
+
+#social-media-icons {
+    color: #2F5596;
+    font-size: 25px;
+    display: flex;
+    float: right;
+    justify-content: space-evenly;
+    padding-right:20px;
+    word-spacing:20px;
+    width: 50%;
+}
+
+.fab:hover {
+    color: #0b2838;
+}
+
+#contact-info {
+    color: #2F5596;
+    font-family: "Raleway", sans-serif;
+    font-size: 90%;
+    display: flex;
+    float: left;
+    justify-content: center;
+    padding-left: 20px;
+    width: 50%;
+}
+
+  }
+
     
    /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */   
     .col-25, .col-75, input[type=submit] {
