--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,6 +495,31 @@ div.desc {
     width: 50%;
 }
 
+/* Code for Back to top button */
+/* This snippet of code was copied as a whole from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+
+#myBtn {
+    display: none;
+    position: fixed;
+    top: 20px;
+    right: 10px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: rgba(224, 184, 192, 0.6);
+    color: rgba(0, 20, 20, 0.6);
+    cursor: pointer;
+    padding: 6px;
+    border-radius: 4px;
+  }
+
+  #myBtn:hover {
+    background-color: #8c0e0f;
+    color: white;
+  }
+
+
 
 /* planning.html */
 
@@ -731,10 +756,9 @@ div.desc {
     clear: both;
   }
   
- /* Responsive layout @media queries max-width 568x */
+ /* Responsive layout @media queries max-width 599px */
 
-  @media screen and (min-width: 320px)
-                and (max-width: 568px)
+  @media screen and (max-width: 599px)
                 {
 
     #menu {
@@ -753,8 +777,6 @@ div.desc {
         .cover-headlines-outer {
             width: 397px;
             height: 134px;
-            border: 3px solid #8c0e0f;
-            background-color: #e6eed6;
             border-radius: 25px;
             display: flex;
             position: absolute;
@@ -765,8 +787,6 @@ div.desc {
         .cover-headlines {
 
             font-size: 100%;
-            font-family: "Cabin", sans-serif;
-            text-transform: capitalize;
             letter-spacing: 4px;
             width: 377px;
             height: 124px;
@@ -798,21 +818,18 @@ div.desc {
 
 #left-box {
     width: 100%;
-    background-color: #0b2838;
     height: 375px;
     margin: 5px;
 }
 
 #right-box {
     width: 100%;
-    background-color: #0b2838;
     height: 375px;
     margin: 5px;
 }
 
 #centre-box {
     width: 100%;
-    background-color: #2F5596;
     height: 375px;
     margin: 5px;
     clear: both;
@@ -833,22 +850,20 @@ div.desc {
 
 #left-box-testimonial {
     width: 100%;
-    background-color: #0b2838;
     height: 375px;
     margin: 5px;
 }
 
 #centre-box-testimonial {
     width: 100%;
-    background-color: #2F5596;
     height: 375px;
     margin: 5px;
+    clear: both;
 }
 
 #right-box-testimonial {
     width: 100%;
-    background-color: #0b2838;
-    height: 375px;
+    height: 420px;
     margin: 5px;
 }
 
@@ -919,10 +934,6 @@ div.desc {
     width: 50%;
 }
 
-.fab:hover {
-    color: #0b2838;
-}
-
 #contact-info {
     color: #2F5596;
     font-family: "Raleway", sans-serif;
@@ -932,31 +943,206 @@ div.desc {
     justify-content: center;
     padding-left: 20px;
     width: 50%;
-}
-
-  }
-
-    
-   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */   
+}   
+/* Contact.html - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */   
     .col-25, .col-75, input[type=submit] {
       width: 100%;
       margin-top: 0;
     }
   }
 
-/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
-@media only screen and (max-device-width: 1366px) {
-    .parallax {
-      background-attachment: scroll;
-    }
-  }
-
- /* Extra small devices (phones, 600px and down) */
- @media only screen and (max-width: 600px) {...}
-
  /* Small devices (portrait tablets and large phones, 600px and up) */
- @media only screen and (min-width: 600px) {...}
- 
+ @media only screen and (min-width: 600px) {
+
+#menu {
+text-align: center;
+}
+
+.hero-image-outer {
+height: 523px;
+width: 100%;
+position: relative;
+background-position-x: left;
+background-position-y: top;
+background-size: 132%;
+}
+
+.cover-headlines-outer {
+width: 397px;
+height: 134px;
+display: flex;
+position: absolute;
+justify-content: center;
+align-items: center;
+}
+
+.cover-headlines {
+
+font-size: 100%;
+font-family: "Cabin", sans-serif;
+text-transform: capitalize;
+letter-spacing: 4px;
+width: 377px;
+height: 124px;
+display: flex;
+position: absolute;
+justify-content: center;
+text-align: center;
+flex-direction: column;
+}
+
+/* about-us boxes on index.html */
+#about-us {
+width: 80%;
+height: auto;
+margin: 0 auto;
+display: flex;
+flex-direction: column;
+justify-content: center;
+text-align: center;
+color: white;
+}
+
+#centre-text {
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin: 0 auto;
+}
+
+#left-box {
+width: 100%;
+background-color: #0b2838;
+height: 375px;
+margin: 5px;
+}
+
+#right-box {
+width: 100%;
+background-color: #0b2838;
+height: 375px;
+margin: 5px;
+}
+
+#centre-box {
+width: 100%;
+background-color: #2F5596;
+height: 375px;
+margin: 5px;
+clear: both;
+}
+
+/* testimonials boxes on index.html */
+
+#testimonials {
+width: 80%;
+height: auto;
+margin: 0 auto;
+display: flex;
+flex-direction: column;
+justify-content: center;
+text-align: center;
+}
+
+#left-box-testimonial {
+width: 100%;
+height: 375px;
+margin: 5px;
+}
+
+#centre-box-testimonial {
+width: 100%;
+height: 375px;
+margin: 5px;
+clear: both;
+}
+
+#right-box-testimonial {
+width: 100%;
+height: 420px;
+margin: 5px;
+}
+
+/* footer info boxes */
+
+.footer {
+position:fixed;
+bottom:0;
+left:0;
+width:100%;
+height: auto;
+background-color: #fff;
+padding-bottom: 10px;
+}
+
+#infobox-content-1 {
+font-size: 20px;
+display: flex;
+float: left;
+justify-content: center;
+padding-left: 10px;
+word-spacing: 20px;
+width: 50%;
+}
+
+.title-left {
+color: #2F5596;
+text-decoration: none;
+font-family: "Cabin", Sans-serif;
+font-size: 85%;
+letter-spacing: 4px;
+font-weight: 500;
+line-height: 20px;
+margin: 10px 0px 5px 0px;
+border-bottom: 1px solid #8c0e0f
+}
+
+#infobox-content-2 {
+font-size: 20px;
+display: flex;
+float: right;
+justify-content: center;
+padding-right: 10px;
+word-spacing: 20px;
+width: 50%;
+}
+
+.title-right {
+color: #2F5596;
+text-decoration: none;
+font-family: "Cabin", Sans-serif;
+font-size: 85%;
+letter-spacing: 4px;
+font-weight: 500;
+line-height: 20px;
+margin: 10px 0px 5px 0px;
+border-bottom: 1px solid #8c0e0f
+}
+
+#social-media-icons {
+color: #2F5596;
+font-size: 25px;
+display: flex;
+float: right;
+justify-content: space-evenly;
+padding-right: 20px;
+word-spacing: 20px;
+width: 50%;
+}
+
+#contact-info {
+color: #2F5596;
+font-family: "Raleway", sans-serif;
+font-size: 90%;
+display: flex;
+float: left;
+justify-content: center;
+padding-left: 20px;
+width: 50%;
+}
+    }
+
+
  /* Medium devices (landscape tablets, 768px and up) */
  @media only screen and (min-width: 768px) {...}
  
@@ -965,3 +1151,10 @@ div.desc {
  
  /* Extra large devices (large laptops and desktops, 1200px and up) */
  @media only screen and (min-width: 1200px) {...} 
+
+ /* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+      background-attachment: scroll;
+    }
+}
