--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -878,5 +878,31 @@ div.desc {
     font-size: 90%;
     padding-left: 20px;
     } 
-    
+
+/* Contact.html - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */ 
+.col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+    }
+
+    #contact-page-outer {
+        height: auto;
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        }
+        
+        .contact-left-side {
+        width: 100%;
+        height: auto;
+        }
+        .contact-right-side {
+        width: 100%;
+        height: auto;
+        }
+        #form-title {
+            padding: 20px;
+            text-align:center;
+        }
 }
