--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -683,7 +683,7 @@ div.desc {
 
 /* contact.html */
 
- #contact-page-outer {
+ .contact-page-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
@@ -709,18 +709,18 @@ div.desc {
     float: left;
 }
 
-#form-title {
+.form-title {
     padding: 50px; 
 }
 
-#form-title > h2 {
+.form-title > h2 {
     color: white;
     font-size: 48px;
     font-weight: 700;
     line-height: 58px; 
 }
 
-#form-title > h4 {
+.form-title > h4 {
     color: #9F886B;
     font: "Raleway", sans-serif;
     font-size: 24px;
@@ -916,7 +916,7 @@ div.desc {
     margin-top: 0;
     }
 
-    #contact-page-outer {
+    .contact-page-outer {
         height: auto;
         width: 90%;
         margin: 0 auto;
@@ -928,11 +928,13 @@ div.desc {
         width: 100%;
         height: auto;
         }
+
         .contact-right-side {
         width: 100%;
         height: auto;
         }
-        #form-title {
+
+        .form-title {
             padding: 20px;
             text-align:center;
         }
