--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,7 @@ body {
     font-family: "Cabin", sans-serif;
     font-weight: 500;
     color: #2F5596;
-}
-
-body, html {
-    height: 100%;
+    min-height: 100vh;
 }
 
 a {
@@ -691,7 +688,6 @@ div.desc {
     position: relative;
     display: flex;
     justify-content: left;
-    align-items: left;
  }
 
 .contact-left-side {
@@ -740,6 +736,16 @@ div.desc {
     font-family: 'Cabin', sans-serif;
     font-size: 16px;
   }
+
+  input[type="email"] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font-family: 'Cabin', sans-serif;
+    font-size: 16px;
+  }
   
   label {
     padding: 12px 12px 12px 0;
@@ -750,8 +756,8 @@ div.desc {
   }
   
   input[type=submit] {
-    background-color: #8c0e0f;
-    color: white;
+    background-color: rgba(224, 184, 192, 0.6);
+    color: #0B2838;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -761,6 +767,7 @@ div.desc {
   
   input[type=submit]:hover {
     background-color: #8c0e0f;
+    color: white;
   }
   
   .container {
@@ -912,7 +919,16 @@ div.desc {
     .contact-info {
     font-size: 90%;
     padding-left: 20px;
-    } 
+    }
+
+/*Tactics.html - when the screen is less than 600px wide, ......*/
+td {
+    display: none;
+}
+
+th {
+    display: block;
+}
 
 /* Contact.html - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */ 
 .col-25, .col-75, input[type=submit] {
