--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -822,66 +822,6 @@ div.desc {
     height: 114px; 
     }
 
-/* about-us boxes on index.html - when the screen is less than 599px wide, make the three boxes stack on top of each other instead of next to each other */
-#about-us {
-    width: 80%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    }
-
-    #centre-text {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        margin: 0 auto;
-        }
-
-    #left-box {
-        width: 100%;
-        height: 450px;
-        margin-bottom: 50px;
-        }
-        
-        #right-box {
-        width: 100%;
-        height: 450px;
-        }
-        
-        #centre-box {
-        width: 100%;
-        height: 450px;
-        margin-bottom: 50px;
-        clear: both;
-        }
-
-/* testimonials boxes on index.html - when the screen is less than 599px wide, make the three boxes stack on top of each other instead of next to each other */
-
-#testimonials {
-    width: 80%;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    }
-    
-    #left-box-testimonial {
-    width: 100%;
-    height: 420px;
-    }
-    
-    #centre-box-testimonial {
-    width: 100%;
-    height: 375px;
-    margin: 5px;
-    }
-    
-    #right-box-testimonial {
-    width: 100%;
-    height: 420px;
-    margin-bottom: 30px;
-    }
-
 /* footer info boxes - decrease font size and padding for smaller screen sizes */
 
 .footer {
@@ -930,8 +870,81 @@ th {
 td {
     display: block;
 }
+}
 
-/* Contact.html - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */ 
+/* Responsive layout @media queries min-width 600px and max-width 1024px */
+
+@media screen and (max-width: 1024px) 
+{
+
+/* Tactics.html - remove padding inbetween table cells to fit the data into the table */
+   
+    .Rtable-cell {
+        padding: 0.6em;
+    }
+
+/* about-us boxes on index.html - when the screen is less than 1024px wide, make the three boxes stack on top of each other instead of next to each other */
+#about-us {
+    width: 80%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    }
+
+    #centre-text {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 0 auto;
+        }
+
+    #left-box {
+        width: 100%;
+        height: 450px;
+        margin-bottom: 50px;
+        }
+        
+        #right-box {
+        width: 100%;
+        height: 450px;
+        }
+        
+        #centre-box {
+        width: 100%;
+        height: 450px;
+        margin-bottom: 50px;
+        clear: both;
+        }
+
+/* testimonials boxes on index.html - when the screen is less than 1024px wide, make the three boxes stack on top of each other instead of next to each other */
+
+#testimonials {
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    }
+    
+    #left-box-testimonial {
+    width: 100%;
+    height: 420px;
+    }
+    
+    #centre-box-testimonial {
+    width: 100%;
+    height: 375px;
+    margin: 5px;
+    }
+    
+    #right-box-testimonial {
+    width: 100%;
+    height: 420px;
+    margin-bottom: 30px;
+    }
+
+
+/* Contact.html - when the screen is less than 1024px wide, make the two columns stack on top of each other instead of next to each other */ 
 .col-25, .col-75, input[type=submit] {
     width: 100%;
     margin-top: 0;
@@ -968,16 +981,4 @@ td {
 }
 }
 
-/* Responsive layout @media queries min-width 600px and max-width 1024px */
 
-@media screen and (min-width: 600px)
-              and (max-width: 1024px) 
-{
-
-/* Tactics.html - remove padding inbetween table cells to fit the data into the table */
-   
-    .Rtable-cell {
-        padding: 0.6em;
-    }
-
-              }
