--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -872,9 +872,9 @@ td {
 }
 }
 
-/* Responsive layout @media queries min-width 600px and max-width 1024px */
+/* Responsive layout @media queries max-width 1025px */
 
-@media screen and (max-width: 1024px) 
+@media screen and (max-width: 1025px) 
 {
 
 /* Tactics.html - remove padding inbetween table cells to fit the data into the table */
@@ -916,7 +916,7 @@ td {
         clear: both;
         }
 
-/* testimonials boxes on index.html - when the screen is less than 1024px wide, make the three boxes stack on top of each other instead of next to each other */
+/* testimonials boxes on index.html - when the screen is less than 1025px wide, make the three boxes stack on top of each other instead of next to each other */
 
 #testimonials {
     width: 80%;
@@ -944,7 +944,7 @@ td {
     }
 
 
-/* Contact.html - when the screen is less than 1024px wide, make the two columns stack on top of each other instead of next to each other */ 
+/* Contact.html - when the screen is less than 1025px wide, make the two columns stack on top of each other instead of next to each other */ 
 .col-25, .col-75, input[type=submit] {
     width: 100%;
     margin-top: 0;
