--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ h2 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 /* text over image */
@@ -885,7 +885,7 @@ input[type=submit]:hover {
         padding: 0.6em;
     }
 
-    /* about-us boxes on index.html - when the screen is less than 1024px wide, make the three boxes stack on top of each other instead of next to each other */
+    /* about-us boxes on index.html - when the screen is less than 1025px wide, make the three boxes stack on top of each other instead of next to each other */
     #about-us {
         width: 80%;
         height: auto;
@@ -944,7 +944,6 @@ input[type=submit]:hover {
         height: 420px;
         margin-bottom: 30px;
     }
-
 
     /* Contact.html - when the screen is less than 1025px wide, make the two columns stack on top of each other instead of next to each other */
     .col-25,
