--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,14 +526,14 @@ div.desc {
 /* planning.html */
 
 #plan-hero-image-home {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background: url('../images/pexels-laura-tancredi-7078691.jpg');
     /* Create parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 .headlines-h2 {
@@ -802,8 +802,8 @@ input[type=submit]:hover {
 }
 
 /* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
-@media only screen and (max-device-width: 1366px) {
-    .parallax {
+@media only screen and (max-device-width: 1025px) {
+    #hero-image-home, #plan-hero-image-home, #tactics-hero-image-home {
         background-attachment: scroll;
     }
 }
