--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,7 +686,7 @@ div.desc {
 /* contact.html */
 
 .contact-page-outer {
-    height: 600px;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
     position: relative;
