--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -795,9 +795,7 @@ input[type=submit]:hover {
 
 /* Responsive layout @media queries max-width 599px */
 
-@media screen and (max-width: 599px)
-              and (orientation: portrait)
-              and (orientation: landscape) {
+@media screen and (max-width: 599px) {
 
     #menu {
         text-align: center;
