--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,13 +877,32 @@ input[type=submit]:hover {
 
 /* Responsive layout @media queries max-width 1025px */
 
-@media screen and (max-width: 1025px) {
+@media screen and (min-width: 599px)
+              and (max-width: 1025px)
+              and (orientation: landscape) {
 
     /* Tactics.html - remove padding inbetween table cells to fit the data into the table */
 
+    .tactics-table-5cols {
+        width: 95%;
+    }
     .Rtable-cell {
         padding: 0.6em;
     }
+}   
+
+    @media screen and (max-width: 1025px) {
+
+    /* Tactics.html - remove padding inbetween table cells to fit the data into the table */
+
+    .tactics-table-5cols {
+            width: 95%;
+    }
+        
+    .Rtable-cell {
+            padding: 0.6em;
+    }
+}
 
     /* about-us boxes on index.html - when the screen is less than 1025px wide, make the three boxes stack on top of each other instead of next to each other */
     #about-us {
